--- a/.github/workflows/acceptance_tests_cpython.yml
+++ b/.github/workflows/acceptance_tests_cpython.yml
@@ -70,3 +70,15 @@ jobs:
           name: at-results-${{ matrix.python-version }}-${{ matrix.os }}
           path: atest/results
         if: always() && job.status == 'failure'
+
+      - name: FTP-Deploy-Action
+        uses: SamKirkland/FTP-Deploy-Action@9c4e4646b8b71d9ff86cfb1a44395ce36bf5ae56
+        env:
+          FTP_SERVER: ftpupload.net
+          FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
+          FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
+          LOCAL_DIR: atest/results
+          REMOTE_DIR: ${{ GITHUB_SHA }}/at-results-${{ matrix.python-version }}-${{ matrix.os }}
+        if: always() && job.status == 'failure'
+      - run: echo "Test results at http://rf-test-reports.epizy.com/${{ GITHUB_SHA }}/at-results-${{ matrix.python-version }}-${{ matrix.os }}"
+        if: always() && job.status == 'failure'
